Prevent lobby table rows from wrapping

--- a/public/css/hanabi.css
+++ b/public/css/hanabi.css
@@ -121,6 +121,7 @@ ul {
 #table-list {
 	height: 85%;
 	overflow-y: auto;
+	white-space: nowrap;
 
 	border: 1px solid #444;
 	border-radius: 5px;
@@ -380,6 +381,7 @@ ul {
 
 .table-name {
 	width: 240px;
+	white-space: normal;
 }
 
 .table-players {
